Fix home page horizontal scroll

--- a/src/PageHome/style.scss
+++ b/src/PageHome/style.scss
@@ -4,6 +4,7 @@
 
 .page-home {
   cursor: default;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   &__top {
     display: flex;
